商品情報削除処理の追加
